==> pbordukov/pda/pcd8544.cpp <==
#include "pcd8544.h"
#define PCD8544_FUNCTION_SET (1<<5)
#define PCD8544_FUNCTION_PD  (1<<2)
#define PCD8544_FUNCTION_V   (1<<1)
#define PCD8544_FUNCTION_H   (1<<0)
#define PCD8544_DISPLAY_CONTROL (1<<3)
#define PCD8544_DISPLAY_CONTROL_D (1<<2)
#define PCD8544_DISPLAY_CONTROL_E (1<<0)
#define PCD8544_DISPLAY_CONTROL_BLANK 0
#define PCD8544_DISPLAY_CONTROL_NORMAL_MODE  PCD8544_DISPLAY_CONTROL_D
#define PCD8544_DISPLAY_CONTROL_ALL_ON       PCD8544_DISPLAY_CONTROL_E
#define PCD8544_DISPLAY_CONTROL_INVERSE      (PCD8544_DISPLAY_CONTROL_D|PCD8544_DISPLAY_CONTROL_E)
#define PCD8544_SET_Y_ADDRESS (1<<6)
#define PCD8544_Y_ADRESS_MASK 0b111
#define PCD8544_SET_X_ADDRESS (1<<7)
#define PCD8544_X_ADRESS_MASK 0b01111111
#define PCD8544_TEMP_CONTROL (1<<2)
#define PCD8544_TEMP_TC1     (1<<1)
#define PCD8544_TEMP_TC0     (1<<0)
#define PCD8544_BIAS     (1<<4)
#define PCD8544_BIAS_BS2 (1<<2)
#define PCD8544_BIAS_BS1 (1<<1)
#define PCD8544_BIAS_BS0 (1<<0)
#define PCD8544_VOP (1<<7)
#define PCD8544_SET_CONTRAST 0x00
#define PCD8544_SET_VOP        0x00

void pcd8544::begin(uint8_t cntrst)
{
  pinMode(cs,   OUTPUT);
  pinMode(reset, OUTPUT);
  pinMode(dc,    OUTPUT);
  pinMode(sdin,  OUTPUT);
  pinMode(sclk,  OUTPUT);
  pinMode(SS, OUTPUT); // To ensure master mode
  SPCR |= (1<<SPE) | (1<<MSTR);
  digitalWrite(reset, LOW);
  delay(1);
  digitalWrite(reset, HIGH);
  // Extenden instructions and !powerdown
  // and horizontal adressing (autoincrement of x-adress)
  command(PCD8544_FUNCTION_SET | PCD8544_FUNCTION_H);
  // Set Vop to 0x80
  command(PCD8544_VOP | cntrst);
  // Vlcd temp. coeff. 0
  command(PCD8544_TEMP_CONTROL);
  // Bias system 4, 1:48
  command(PCD8544_BIAS | PCD8544_BIAS_BS1 | PCD8544_BIAS_BS0);
  // Set H = 0 for normal instructions
  command(PCD8544_FUNCTION_SET);  
  // Normal mode
  command(PCD8544_DISPLAY_CONTROL | PCD8544_DISPLAY_CONTROL_NORMAL_MODE);
}

void pcd8544::send(uint8_t data_or_command, uint8_t data)
{
  digitalWrite(dc, data_or_command);
  digitalWrite(cs, LOW);
    SPDR = data;
    while(!(SPSR & (1<<SPIF))) ;
  digitalWrite(cs, HIGH);
  if(data_or_command)
    inc_row_column();
}
